kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cloud-infra
  labels:
    app.kubernetes.io/part-of: cloud-infra
